<resources>
    <string name="app_name">xmpp_20161025</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="all_rights_reserved">Copyright  2016 韩中豪. All Rights Reserved.
</string>
    <string name="splash_name">XMPP 客户端</string>
    <string name="setting_about_description">6502</string>
    <string name="account">账号</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="auto_save_password">记住密码</string>
    <string name="hide_login">隐身登陆</string>
    <string name="info_accounts">使用加密</string>
    <string name="silence_login">静音模式</string>
    <string name="go_to_register">注册新用户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">测试</string>
</resources>
